extrasmall media quert

--- a/assets/css/12bool.css
+++ b/assets/css/12bool.css
@@ -209,7 +209,7 @@
 
 
 /* small */
-@media all and (min-width: 576px){
+@media all and (max-width: 576px){
    .container{
       width: 540px;
    }
