--- a/css/12bool.css
+++ b/css/12bool.css
@@ -109,8 +109,9 @@
 
 /* responsive */
 /* extra-small */
+   
    .container{
-      width: 540px;
+      min-width: 540px;
    }
    .col-xs-1{
       flex-basis: calc((100% / 12) * 1);
@@ -209,7 +210,7 @@
 
 
 /* small */
-@media all and (max-width: 576px){
+@media all and (min-width: 576px){
    .container{
       width: 540px;
    }
